--- a/websitetemple.html
+++ b/websitetemple.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<body>
-
-<div></div>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <!--title -->
+    <title>title</title>
+    <link href="myproject.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <!--heading -->
+    <h1>This is a heading</h1>
+    <!--body para -->
+<p>This is a paragraph.</p>
+    <script src="myproject.js"></script>
+  </body>
 </html>
