--- a/websitetemple.html
+++ b/websitetemple.html
@@ -7,9 +7,10 @@
     <title>title</title>
     <link href="myproject.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body id="body">
     <!--heading -->
-    <h1>This is a heading</h1>
+    <h1 id="h1">This is a heading</h1>
+    <h2 id= "h2"> eeeee </h2>
     <!--body para -->
 <p>This is a paragraph.</p>
     <script src="myproject.js"></script>
