--- a/websitetemple.html
+++ b/websitetemple.html
@@ -8,6 +8,12 @@
     <link href="myproject.css" rel="stylesheet" type="text/css" />
   </head>
   <body id="body">
+    <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
     <!--heading -->
     <h1 id="h1">This is a heading</h1>
     <h2 id= "h2"> eeeee </h2>
