--- a/websitetemple.html
+++ b/websitetemple.html
@@ -8,11 +8,15 @@
     <link href="myproject.css" rel="stylesheet" type="text/css" />
   </head>
   <body id="body">
-    <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+    <div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#Adven">Adventure game</a>
+  <a href="#Racer">Need for speed: Rivals</a>
+  <a href="#Multiplayer shooters">Multiplayer shooters</a>
+  <a href="#Sandbox">Sandbox</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
     <!--heading -->
     <h1 id="h1">This is a heading</h1>
