--- a/websitetemple.html
+++ b/websitetemple.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <!--title -->
     <title>title</title>
-    <link href="myproject.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body id="body">
+    <link href="index.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body id="body">
     <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#Adven">Adventure game</a>
-  <a href="#Racer">Need for speed: Rivals</a>
-  <a href="#Multiplayer shooters">Multiplayer shooters</a>
-  <a href="#Sandbox">Sandbox</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
+        <a href="#home" class="active">Home</a>
+        <a href="#Adven">Adventure game</a>
+        <a href="#Racer">Need for speed: Rivals</a>
+        <a href="#Multiplayer shooters">Multiplayer shooters</a>
+        <a href="#Sandbox">Sandbox</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
     <!--heading -->
     <h1 id="h1">This is a heading</h1>
-    <h2 id= "h2"> eeeee </h2>
+    <h2 id="h2"> eeeee </h2>
     <!--body para -->
-<p>This is a paragraph.</p>
+    <p>This is a paragraph.</p>
     <script src="myproject.js"></script>
-  </body>
+</body>
+
 </html>
