--- a/websitetemple.html
+++ b/websitetemple.html
@@ -20,12 +20,15 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-    <!--heading -->
-    <h1 id="h1">This is a heading</h1>
-    <h2 id="h2"> eeeee </h2>
-    <!--body para -->
-    <p>This is a paragraph.</p>
+
+    <h1 id="h1">What are video games</h1>
+
+    <p>A video game or computer game is an electronic game that involves interaction with a user interface or input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback. 
+        This feedback is shown on a video display device, such as a TV set, monitor, touchscreen, or virtual reality headset. 
+        Video games are often augmented with audio feedback delivered through speakers or headphones, and sometimes with other types of feedback, including haptic technology. 
+        Computer games are not all video games—for example text adventure games, chess, and so on do not depend upon a graphics display.</p>
     <script src="myproject.js"></script>
 </body>
 
+</html>
 </html>
