--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html id="body">
 
 <head>
@@ -24,13 +23,18 @@
 
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
+    <img src="video games.jfif" style="float: right" height="250" width="250" id="img">
     <br>
     <br>
-    <img src="">
 
-    <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback. This feedback is shown on a video
-        display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often augmented with audio feedback delivered through speakers or headphones, and sometimes with other types of feedback, including haptic technology.
-        Computer games are not all video games—for example text adventure games, chess, and so on do not depend upon a graphics display.
+    <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
+        input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
+        This feedback is shown on a video
+        display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often
+        augmented with audio feedback delivered through speakers or headphones, and sometimes with other types of
+        feedback, including haptic technology.
+        Computer games are not all video games—for example text adventure games, chess, and so on do not depend upon a
+        graphics display.
     </p>
     <br>
     <br>
@@ -38,7 +42,9 @@
     <hr id="solid">
     <br>
     <br>
-    <P id="para">Most of the world plays video games right now and they have become immensely popular recently. They have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID came about and everyone was stuck at
+    <P id="para">Most of the world plays video games right now and they have become immensely popular recently. They
+        have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID
+        came about and everyone was stuck at
         home, video games gained immense popularity as people had nothing else to do.
     </P>
     <br>
@@ -47,9 +53,15 @@
     <hr id="solid">
     <br>
     <br>
-    <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental games. Coupled with the availability of the Internet and digital distribution, this gave room for independent video game development (or indie games)
-        to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has been increasing. The emerging Asian markets and mobile games on smartphones in particular are altering player demographics towards casual gaming
-        and increasing monetization by incorporating games as a service. As of 2020, the global video game market has estimated annual revenues of US$159 billion across hardware, software, and services. This is three times the size of the 2019 global
+    <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
+        games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
+        video game development (or indie games)
+        to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has been
+        increasing. The emerging Asian markets and mobile games on smartphones in particular are altering player
+        demographics towards casual gaming
+        and increasing monetization by incorporating games as a service. As of 2020, the global video game market has
+        estimated annual revenues of US$159 billion across hardware, software, and services. This is three times the
+        size of the 2019 global
         music industry and four times that of the 2019 film industry.
     </p>
     <script src="myproject.js"></script>
