Added search bar to HTML

--- a/websitetemple.html
+++ b/websitetemple.html
@@ -19,6 +19,7 @@
         <a href="#Sandbox">Sandbox</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
+        <input type="text" placeholder="Search..">
         </a>
     </div>
 
