Added search bar QoL stuff

--- a/websitetemple.html
+++ b/websitetemple.html
@@ -19,7 +19,10 @@
         <a href="#Sandbox">Sandbox</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
-        <input type="text" placeholder="Search..">
+            <form action="/action_page.php">
+                <input type="text" placeholder="Search.." name="search">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </form>
         </a>
     </div>
 
