Changed template+ changed page title!~

--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <!--title -->
-    <title>title</title>
+    <title>Quiz!</title>
     <link href="myproject.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -16,7 +16,7 @@
         <a href="#Adven">Adventure game</a>
         <a href="#Racer">Need for speed: Rivals</a>
         <a href="#Multiplayer shooters">Multiplayer shooters</a>
-        <a href="#Sandbox">Sandbox</a>
+        <a href="#Sandbox">Quiz</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
