--- a/websitetemple.html
+++ b/websitetemple.html
@@ -16,7 +16,7 @@
         <a href="#Adven">Adventure game</a>
         <a href="#Racer">Need for speed: Rivals</a>
         <a href="#Multiplayer shooters">Multiplayer shooters</a>
-        <a href="#Sandbox">Sandbox</a>
+        <a href="#quiz">Quiz</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
             <form action="/action_page.php">
