--- a/quiz.html
+++ b/quiz.html
@@ -21,9 +21,13 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-
+    <div id="quiz"></div>
+    <button id="submit">Get Results</button>
+    <div id="results"></div>
+    generateQuiz(myQuestions, quizContainer, resultsContainer, submitButton);
     
     <script src="myproject.js"></script>
+    <script src="quiz.js"></script>
 </body>
 
 </html>
