--- a/homepage.html
+++ b/homepage.html
@@ -15,7 +15,7 @@
         <a href="#Adven">Adventure game</a>
         <a href="#Racer">Need for speed: Rivals</a>
         <a href="#Multiplayer shooters">Multiplayer shooters</a>
-        <a href="#Sandbox">Sandbox</a>
+        <a href="#Quiz">Quiz</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
@@ -23,7 +23,7 @@
 
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
-    <img src="video games.jfif" style="float: right" height="250" width="250" id="img">
+    <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
     <br>
     <br>
 
