--- a/quiz.html
+++ b/quiz.html
@@ -22,11 +22,25 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-    <div class="buttons">
-        <button id="btn0"><span id="choice0"></span></button>
-        <button id="btn1"><span id="choice1"></span></button>
-        <button id="btn2"><span id="choice2"></span></button>
-        <button id="btn3"><span id="choice3"></span></button>
+    <div class="grid">
+        <div id="quiz">
+            <h1>Quiz in JavaScript  Webdevtrick.com</h1>
+            <hr style="margin-bottom: 20px">
+ 
+            <p id="question"></p>
+ 
+            <div class="buttons">
+                <button id="btn0"><span id="choice0"></span></button>
+                <button id="btn1"><span id="choice1"></span></button>
+                <button id="btn2"><span id="choice2"></span></button>
+                <button id="btn3"><span id="choice3"></span></button>
+            </div>
+ 
+            <hr style="margin-top: 50px">
+            <footer>
+                <p id="progress">Question x of y</p>
+            </footer>
+        </div>
     </div>
    
     
