--- a/quiz.html
+++ b/quiz.html
@@ -24,7 +24,7 @@
     </div>
     <div class="grid">
         <div id="quiz">
-            <h1>Quiz in JavaScript  Webdevtrick.com</h1>
+            <h1>Let's see how much attention you were paying!</h1>
             <hr style="margin-bottom: 20px">
  
             <p id="question"></p>
