--- a/websitetemple.html
+++ b/websitetemple.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <!--title -->
     <title>title</title>
-    <link href="myproject.css" rel="stylesheet" type="text/css" />
+    <link href="test.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body id="body">
