--- a/homepage.html
+++ b/homepage.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width">
     <!--title -->
     <title>title</title>
-    <link href="myproject.css" rel="stylesheet" type="text/css" />
+    <link href="test.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body id="body">
     <div class="topnav" id="myTopnav">
-        <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png" alt="logo" style="width:100px;height:50px">
+        <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png" alt="logo" style="width: 100px;height:50px">
         <a href="#home" class="active">Home</a>
         <a href="#Adven">Adventure game</a>
         <a href="#Racer">Need for speed: Rivals</a>
