--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,14 @@
 </head>
 
 <body id="body">
-    <div class="topnav" id="myTopnav">
+    <div class="welcomePage">
+       
+       <p style="text-align:center;" style="font-family:'Courier New'">WELCOME</p>
+    </div>
+    <div class="tiledBackground">
+    </div>
+    <div class="maintingz">
+        <div class="topnav" id="myTopnav">
         <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png" alt="logo" style="width: 100px;height:50px">
         <a href="#home" class="active">Home</a>
         <a href="#Adven">Adventure game</a>
@@ -21,7 +28,8 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-
+    </div>
+    <div class="maintingz">
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
     <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
@@ -65,6 +73,7 @@
         size of the 2019 global
         music industry and four times that of the 2019 film industry.
     </p>
+</div>
     <script src="myproject.js"></script>
 </body>
 
