changed background stuff (convenience)

--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
        
        <p style="text-align:center;" style="font-family:'Courier New'">WELCOME</p>
     </div>
-    <div class="tiledBackground">
+    <div class="bg">
     </div>
     <div class="maintingz">
         <div class="topnav" id="myTopnav">
