--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
 <body id="body">
     <div class="welcomePage">
        
-       <p style="text-align:center;" style="font-family:'Courier New'">WELCOME</p>
+       <p style="text-align:center;font-family:'sans serif';" >WELCOME</p>
     </div>
     <div class="bg">
     </div>
@@ -35,7 +35,7 @@
     <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
     <br>
     <br>
-
+<div id=page-wrap>
     <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
         input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
         This feedback is shown on a video
@@ -73,6 +73,7 @@
         size of the 2019 global
         music industry and four times that of the 2019 film industry.
     </p>
+</div>
 </div>
     <script src="myproject.js"></script>
 </body>
