--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
     </div>
     <div class="maintingz">
         <div class="topnav" id="myTopnav">
-        <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png" alt="logo" style="width: 100px;height:50px">
+        <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png" alt="logo" style="width: 100px;height:50px; float:right">
         <a href="#home" class="active">Home</a>
         <a href="#Adven">Adventure game</a>
         <a href="#Racer">Need for speed: Rivals</a>
@@ -30,12 +30,13 @@
     </div>
     </div>
     <div class="maintingz">
+    <div id="page-wrap">
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
     <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
     <br>
     <br>
-<div id=page-wrap>
+
     <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
         input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
         This feedback is shown on a video
@@ -73,7 +74,7 @@
         size of the 2019 global
         music industry and four times that of the 2019 film industry.
     </p>
-</div>
+
 </div>
     <script src="myproject.js"></script>
 </body>
