--- a/homepage.html
+++ b/homepage.html
@@ -11,71 +11,87 @@
 
 <body id="body">
     <div class="welcomePage">
-       
-       <p style="text-align:center;font-family:'sans serif';" >WELCOME</p>
+
+        <p style="text-align:center;" style="font-family:'Courier New'">WELCOME</p>
     </div>
     <div class="bg">
     </div>
     <div class="maintingz">
         <div class="topnav" id="myTopnav">
-        <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png" alt="logo" style="width: 100px;height:50px; float:right">
-        <a href="#home" class="active">Home</a>
-        <a href="#Adven">Adventure game</a>
-        <a href="#Racer">Need for speed: Rivals</a>
-        <a href="#Multiplayer shooters">Multiplayer shooters</a>
-        <a href="#Quiz">Quiz</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
+            <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png"
+                alt="logo" style="width: 100px;height:50px">
+            <a href="#home" class="active">Home</a>
+            <a href="#Adven">Adventure game</a>
+            <a href="#Racer">Need for speed: Rivals</a>
+            <a href="#Multiplayer shooters">Multiplayer shooters</a>
+            <a href="#Quiz">Quiz</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
     </div>
     <div class="maintingz">
-    <div id="page-wrap">
-    <h1 id="h1">What are video games?</h1>
-    <hr id="solid">
-    <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
-    <br>
-    <br>
+        <h1 id="h1">What are video games?</h1>
+        <hr id="solid">
+        <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg"
+            style="float: right" height="250" width="250" id="img">
 
-    <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
-        input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
-        This feedback is shown on a video
-        display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often
-        augmented with audio feedback delivered through speakers or headphones, and sometimes with other types of
-        feedback, including haptic technology.
-        Computer games are not all video games—for example text adventure games, chess, and so on do not depend upon a
-        graphics display.
-    </p>
-    <br>
-    <br>
-    <h2 id="h2">Relevance</h2>
-    <hr id="solid">
-    <br>
-    <br>
-    <P id="para">Most of the world plays video games right now and they have become immensely popular recently. They
-        have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID
-        came about and everyone was stuck at
-        home, video games gained immense popularity as people had nothing else to do.
-    </P>
-    <br>
-    <br>
-    <h2 id="h2">Development</h2>
-    <hr id="solid">
-    <br>
-    <br>
-    <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
-        games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
-        video game development (or indie games)
-        to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has been
-        increasing. The emerging Asian markets and mobile games on smartphones in particular are altering player
-        demographics towards casual gaming
-        and increasing monetization by incorporating games as a service. As of 2020, the global video game market has
-        estimated annual revenues of US$159 billion across hardware, software, and services. This is three times the
-        size of the 2019 global
-        music industry and four times that of the 2019 film industry.
-    </p>
-
-</div>
+        <h2>table of contents</h2>
+        <br>
+        <br>
+        <p id="para">A video game or computer game is an electronic game that involves interaction with a user
+            interface
+            or
+            input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual
+            feedback.
+            This feedback is shown on a video
+            display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are
+            often
+            augmented with audio feedback delivered through speakers or headphones, and sometimes with other types
+            of
+            feedback, including haptic technology.
+            Computer games are not all video games—for example text adventure games, chess, and so on do not depend
+            upon
+            a
+            graphics display.
+        </p>
+        <br>
+        <br>
+        <h2 id="h2">Relevance</h2>
+        <hr id="solid">
+        <br>
+        <br>
+        <P id="para">Most of the world plays video games right now and they have become immensely popular recently.
+            They
+            have been around since the 1970s and have been becoming more and more mainstream in the time since. When
+            COVID
+            came about and everyone was stuck at
+            home, video games gained immense popularity as people had nothing else to do.
+        </P>
+        <br>
+        <br>
+        <h2 id="h2">Development</h2>
+        <hr id="solid">
+        <br>
+        <br>
+        <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier,
+            experimental
+            games. Coupled with the availability of the Internet and digital distribution, this gave room for
+            independent
+            video game development (or indie games)
+            to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has
+            been
+            increasing. The emerging Asian markets and mobile games on smartphones in particular are altering player
+            demographics towards casual gaming
+            and increasing monetization by incorporating games as a service. As of 2020, the global video game
+            market
+            has
+            estimated annual revenues of US$159 billion across hardware, software, and services. This is three times
+            the
+            size of the 2019 global
+            music industry and four times that of the 2019 film industry.
+        </p>
+    </div>
     <script src="myproject.js"></script>
 </body>
 
