--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
     <!--welcome animation -->
     <div class="welcomePage">
 
-        <p style="text-align:center;" style="font-family:'Courier New'">WELCOME</p>
+        <h1>WELCOME<h1>
     </div>
     
     </div>
@@ -50,8 +50,8 @@
     <!--animation -->
     <div class="maintingz">
         <div class="topnav" id="myTopnav">
-            <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png"
-                alt="logo" style="width: 100px;height:50px">
+            <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
+                alt="logo" style="width: 100px;height:50px;float:right">
             <a href="#home" class="active">Home</a>
             <a href="#Adven">Adventure game</a>
             <a href="#Racer">Need for speed: Rivals</a>
