--- a/homepage.html
+++ b/homepage.html
@@ -63,6 +63,7 @@
         </div>
     </div>
     <div class="maintingz">
+        
     <!--text -->
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
@@ -80,6 +81,19 @@
         graphics display.
     </p>
     <br>
+    <div id="toc_container">
+        <p class="toc_title">Contents</p>
+        <ul class="toc_list">
+          <li><a href="#First_Point_Header">1 First Point Header</a>
+          <ul>
+            <li><a href="#First_Sub_Point_1">1.1 First Sub Point 1</a></li>
+            <li><a href="#First_Sub_Point_2">1.2 First Sub Point 2</a></li>
+          </ul>
+        </li>
+        <li><a href="#Second_Point_Header">2 Second Point Header</a></li>
+        <li><a href="#Third_Point_Header">3 Third Point Header</a></li>
+        </ul>
+        </div>
     <br>
     <h2 id="h2">Relevance</h2>
     <hr id="solid">
