CSS Changes, Table of contents working

--- a/homepage.html
+++ b/homepage.html
@@ -82,16 +82,10 @@
     </p>
     <br>
     <div id="toc_container">
-        <p class="toc_title">Contents</p>
+        <p class="toc_title"><center>Contents</center></p>
         <ul class="toc_list">
-          <li><a href="#First_Point_Header">1 First Point Header</a>
-          <ul>
-            <li><a href="#First_Sub_Point_1">1.1 First Sub Point 1</a></li>
-            <li><a href="#First_Sub_Point_2">1.2 First Sub Point 2</a></li>
-          </ul>
-        </li>
-        <li><a href="#Second_Point_Header">2 Second Point Header</a></li>
-        <li><a href="#Third_Point_Header">3 Third Point Header</a></li>
+          <li><a href="#h2">1 Relevance</a></li>
+        <li><a href="#h4">2 Development</a></li>
         </ul>
         </div>
     <br>
@@ -106,7 +100,7 @@
     </P>
     <br>
     <br>
-    <h2 id="h2">Development</h2>
+    <h4 id="h4">Development</h4>
     <hr id="solid">
     <br>
     <br>
