animation tests (Failed)

--- a/homepage.html
+++ b/homepage.html
@@ -40,11 +40,12 @@
 <div id="repeat">
     <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png" class="bg">
     <!--welcome animation -->
+    <div class="welcomepageIn">
     <div class="welcomePage">
 
         <h1>WELCOME<h1>
     </div>
-    
+</div>
     </div>
     
     <!--animation -->
