--- a/homepage.html
+++ b/homepage.html
@@ -40,12 +40,12 @@
 <div id="repeat">
     <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png" class="bg">
     <!--welcome animation -->
-    <div class="welcomepageIn">
+    
     <div class="welcomePage">
 
         <h1>WELCOME<h1>
     </div>
-</div>
+
     </div>
     
     <!--animation -->
@@ -72,7 +72,7 @@
     <br>
     <br>
 
-    <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
+  <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
         input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
         This feedback is shown on a video
         display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often
@@ -101,7 +101,7 @@
     </P>
     <br>
     <br>
-    <h4 id="h4">Development</h4>
+    <h4 id="h4">Industry</h4>
     <hr id="solid">
     <br>
     <br>
