--- a/homepage.html
+++ b/homepage.html
@@ -64,20 +64,22 @@
         </div>
     </div>
     <div class="maintingz">
-     <!-- Slideshow container -->
-<div class="slideshow-container">
+    
+
+         <!-- Slideshow container -->
+<center><div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="img1.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
+      <img src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
+      <div class="text">Valorant</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="img2.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
+      <div class="text">Home</div>
     </div>
   
     <div class="mySlides fade">
@@ -97,8 +99,11 @@
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
-  </div>   
-    <!--text -->
+  </div></center>
+ 
+    
+  
+  <!--text -->
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
     <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
