--- a/homepage.html
+++ b/homepage.html
@@ -1,159 +1,167 @@
 <!DOCTYPE html>
-<html id="body" >
+<html id="body">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <!--title -->
-    <title>Homepage</title>
-    <link href="test.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <!--title -->
+  <title>Homepage</title>
+  <link href="test.css" rel="stylesheet" type="text/css" />
 </head>
 <style>
+  img.bg {
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
 
-		
-		img.bg {
-			/* Set rules to fill background */
-			min-height: 100%;
-			min-width: 1024px;
-			
-			/* Set up proportionate scaling */
-			width: 100%;
-			height: auto;
-			
-			/* Set up positioning */
-			position: fixed;
-			top: 0;
-			left: 0;
-		}
-		
-		@media screen and (max-width: 1024px){
-			img.bg {
-				left: 50%;
-				margin-left: -512px; }
-		}
-		
-		#page-wrap { position: relative; width: 400px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
-		p { font: 15px/2 Georgia, Serif; margin: 0 0 30px 0; text-indent: 40px; }
-	
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  @media screen and (max-width: 1024px) {
+    img.bg {
+      left: 50%;
+      margin-left: -512px;
+    }
+  }
+
+  #page-wrap {
+    position: relative;
+    width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background: white;
+    -moz-box-shadow: 0 0 20px black;
+    -webkit-box-shadow: 0 0 20px black;
+    box-shadow: 0 0 20px black;
+  }
+
+  p {
+    font: 15px/2 Georgia, Serif;
+    margin: 0 0 30px 0;
+    text-indent: 40px;
+  }
 </style>
+
 <body id="body">
-<div id="repeat">
-    <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png" class="bg">
+  <div id="repeat">
+    <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png"
+      class="bg">
     <!--welcome animation -->
-    
+
     <div class="welcomePage">
 
-        <h1>WELCOME<h1>
+      <h1>WELCOME<h1>
     </div>
 
-    </div>
-    
-    <!--animation -->
-    <div class="maintingz">
-        <div class="topnav" id="myTopnav">
-            <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
-                alt="logo" style="width: 100px;height:50px;float:right">
-            <a href="#home" class="active">Home</a>
-            <a href="#Adven">Adventure game</a>
-            <a href="#Racer">Need for speed: Rivals</a>
-            <a href="#Multiplayer shooters">Multiplayer shooters</a>
-            <a href="#Quiz">Quiz</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
-        </div>
-    </div>
-    <div class="maintingz">
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="img1.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="img2.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="img3.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
-    </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>   
+
+  <!--animation -->
+  <div class="maintingz">
+    <div class="topnav" id="myTopnav">
+      <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
+        alt="logo" style="width: 100px;height:50px;float:right">
+      <a href="#home" class="active">Home</a>
+      <a href="#Adven">Adventure game</a>
+      <a href="#Multiplayer shooters">Multiplayer shooters</a>
+      <a href="#Quiz">Quiz</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+  </div>
+  <div class="maintingz">
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="img1.jpg" style="width:100%">
+        <div class="text">Caption Text</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="img2.jpg" style="width:100%">
+        <div class="text">Caption Two</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="img3.jpg" style="width:100%">
+        <div class="text">Caption Three</div>
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
     <!--text -->
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
-    <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="float: right" height="250" width="250" id="img">
-    <br>
+    <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg"
+      style="float: right" height="250" width="250" id="img">
     <br>
 
-  <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
-        input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
-        This feedback is shown on a video
-        display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often
-        augmented with audio feedback delivered through speakers or headphones, and sometimes with other types of
-        feedback, including haptic technology.
-        Computer games are not all video games—for example text adventure games, chess, and so on do not depend upon a
-        graphics display.
+    <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
+      input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
+      This feedback is shown on a video
+      display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often
+      augmented with audio feedback delivered through speakers or headphones, and sometimes with other types of
+      feedback, including haptic technology.
+      Computer games are not all video games—for example text adventure games, chess, and so on do not depend upon a
+      graphics display.
     </p>
     <br>
     <div id="toc_container">
-        <p class="toc_title"><center>Contents</center></p>
-        <ul class="toc_list">
-          <li><a href="#h2">1 Relevance</a></li>
+      <p class="toc_title">
+        <center>Contents</center>
+      </p>
+      <ul class="toc_list">
+        <li><a href="#h2">1 Relevance</a></li>
         <li><a href="#h4">2 Development</a></li>
-        </ul>
-        </div>
-    <br>
+      </ul>
+    </div>
     <h2 id="h2">Relevance</h2>
     <hr id="solid">
-    <br>
-    <br>
     <P id="para">Most of the world plays video games right now and they have become immensely popular recently. They
-        have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID
-        came about and everyone was stuck at
-        home, video games gained immense popularity as people had nothing else to do.
+      have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID
+      came about and everyone was stuck at
+      home, video games gained immense popularity as people had nothing else to do.
     </P>
-    <br>
-    <br>
     <!--note to dwijay: maybe make this id=para and then use internal css to make it big?-->
     <h4 id="h4">Industry</h4>
     <hr id="solid">
-    <br>
-    <br>
     <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
-        games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
-        video game development (or indie games)
-        to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has been
-        increasing. The emerging Asian markets and mobile games on smartphones in particular are altering player
-        demographics towards casual gaming
-        and increasing monetization by incorporating games as a service. As of 2020, the global video game market has
-        estimated annual revenues of US$159 billion across hardware, software, and services. This is three times the
-        size of the 2019 global
-        music industry and four times that of the 2019 film industry.
+      games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
+      video game development (or indie games)
+      to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has been
+      increasing. The emerging Asian markets and mobile games on smartphones in particular are altering player
+      demographics towards casual gaming
+      and increasing monetization by incorporating games as a service. As of 2020, the global video game market has
+      estimated annual revenues of US$159 billion across hardware, software, and services. This is three times the
+      size of the 2019 global
+      music industry and four times that of the 2019 film industry.
     </p>
-</div>
-</div>
-</div>
-    <script src="myproject.js"></script>
+  </div>
+  </div>
+  </div>
+  <script src="myproject.js"></script>
 </body>
 
 </html>
