--- a/homepage.html
+++ b/homepage.html
@@ -67,7 +67,7 @@
     
 
          <!-- Slideshow container -->
-<center><div class="slideshow-container">
+<div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
@@ -99,7 +99,7 @@
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
-  </div></center>
+  </div>
  
     
   
