--- a/homepage.html
+++ b/homepage.html
@@ -139,6 +139,9 @@
     </div>
     <h2 id="h2">Relevance</h2>
     <hr id="solid">
+    <img
+      src="https://media.istockphoto.com/photos/young-man-wearing-headset-and-play-computer-video-games-online-home-picture-id1290727524?b=1&k=20&m=1290727524&s=170667a&w=0&h=8Ff68TwSesdnGUfE_GbVq5-9l-94vga7F0lAZOK8YkQ="
+      id="img" width="250px" height="200px" style="float: right">
     <P id="para">Most of the world plays video games right now and they have become immensely popular recently. They
       have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID
       came about and everyone was stuck at
