--- a/homepage.html
+++ b/homepage.html
@@ -68,8 +68,8 @@
       <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
         alt="logo" style="width: 100px;height:50px;float:right">
       <a href="#home" class="active">Home</a>
-      <a href="#Adven">Adventure game</a>
-      <a href="#Multiplayer shooters">Multiplayer shooters</a>
+      <a href="#Adven">Red Dead Redemption 2</a>
+      <a href="#Multiplayer shooters">Valorant</a>
       <a href="#Quiz">Quiz</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
