--- a/homepage.html
+++ b/homepage.html
@@ -148,7 +148,7 @@
       home, video games gained immense popularity as people had nothing else to do.
     </P>
     <!--note to dwijay: maybe make this id=para and then use internal css to make it big?-->
-    <h4 id="h4">Industry</h4>
+    <h4 id="h4">Development</h4>
     <hr id="solid">
     <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
       games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
