--- a/homepage.html
+++ b/homepage.html
@@ -61,6 +61,10 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
+            <form action="index.php" method="post">
+              <input type="text" placeholder="Search.." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
         </div>
     </div>
     <div class="maintingz">
