--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,7 @@
     <!--title -->
     <title>Quiz</title>
     <link href="test.css" rel="stylesheet" type="text/css" />
+    <link href="quiz.css" rel="stylesheet" type="text/css" />
 </head>
 <style>
 
@@ -58,46 +59,7 @@
                 <i class="fa fa-bars"></i>
             </a>
 </div>
-</div>
-    
-    
-
-         <!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
-      <div class="text">Valorant</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
-      <div class="text">Home</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="img3.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
-    </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
-  
-  <div class="grid">
+<div class="grid">
     <div id="quiz">
         <h1>Quiz in JavaScript  Webdevtrick.com</h1>
         <hr style="margin-bottom: 20px">
@@ -116,7 +78,7 @@
             <p id="progress">Question x of y</p>
         </footer>
     </div>
-</div>  
+</div>
  <script src="myproject.js"></script>
  <script src="quiz.js"></script>
 </body>
