--- a/quiz.html
+++ b/quiz.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html id="body">
 
 <head>
@@ -7,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <!--title -->
     <title>Quiz!</title>
-    <link href="myproject.css" rel="stylesheet" type="text/css" />
+    <link href="test.css" rel="stylesheet" type="text/css" />
     <link href="quiz.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -26,28 +25,26 @@
         <div id="quiz">
             <h1>Let's see how much attention you were paying!</h1>
             <hr style="margin-bottom: 20px">
- 
+
             <p id="question"></p>
- 
+
             <div class="buttons">
                 <button id="btn0"><span id="choice0"></span></button>
                 <button id="btn1"><span id="choice1"></span></button>
                 <button id="btn2"><span id="choice2"></span></button>
                 <button id="btn3"><span id="choice3"></span></button>
             </div>
- 
+
             <hr style="margin-top: 50px">
             <footer>
                 <p id="progress">Question x of y</p>
             </footer>
         </div>
     </div>
-   
-    
+
+
     <script src="myproject.js"></script>
     <script src="quiz.js"></script>
 </body>
-
-</html>
 
 </html>
