--- a/quiz.html
+++ b/quiz.html
@@ -61,7 +61,7 @@
 </div>
 <div class="grid">
     <div id="quiz">
-        <h1>Quiz in JavaScript  Webdevtrick.com</h1>
+        <h1>Let's see if you were paying attention!</h1>
         <hr style="margin-bottom: 20px">
 
         <p id="question"></p>
