--- a/homepage.html
+++ b/homepage.html
@@ -70,6 +70,7 @@
       <a href="#home" class="active">Home</a>
       <a href="#Adven">Red Dead Redemption 2</a>
       <a href="#Multiplayer shooters">Valorant</a>
+      <a href="#Multiplayer shooters">Need For Speed</a>
       <a href="#Quiz">Quiz</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
