textbox thing idk

--- a/homepage.html
+++ b/homepage.html
@@ -125,7 +125,12 @@
   </div>
  
     
-  
+  <div style="background: ghostwhite; 
+  font-size: 20px; 
+  padding: 10px; 
+  border: 1px solid lightgray; 
+  margin-left: 300px;
+  margin-right:300px;">
   <!--text -->
     <h1 id="h1">What are video games?</h1>
     <hr id="solid">
