--- a/homepage.html
+++ b/homepage.html
@@ -43,7 +43,7 @@
   }
 
   p {
-    font: 15px/2 Georgia, Serif;
+    font: 15px/2 'Candara';
     margin: 0 0 30px 0;
     text-indent: 40px;
   }
@@ -57,7 +57,7 @@
 
     <div class="welcomePage">
 
-      <h1>WELCOME<h1>
+     <center> <h1>WELCOME<h1></center>
     </div>
 
   </div>
@@ -138,7 +138,7 @@
       style="float: right" height="250" width="250" id="img">
     <br>
 
-    <p id="para">A video game or computer game is an electronic game that involves interaction with a user interface or
+    <p >A video game or computer game is an electronic game that involves interaction with a user interface or
       input device – such as a joystick, controller, keyboard, or motion sensing device – to generate visual feedback.
       This feedback is shown on a video
       display device, such as a TV set, monitor, touchscreen, or virtual reality headset. Video games are often
@@ -162,15 +162,11 @@
     <img
       src="https://media.istockphoto.com/photos/young-man-wearing-headset-and-play-computer-video-games-online-home-picture-id1290727524?b=1&k=20&m=1290727524&s=170667a&w=0&h=8Ff68TwSesdnGUfE_GbVq5-9l-94vga7F0lAZOK8YkQ="
       id="img" width="250px" height="200px" style="float: right">
-    <P id="para">Most of the world plays video games right now and they have become immensely popular recently. They
-      have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID
-      came about and everyone was stuck at
-      home, video games gained immense popularity as people had nothing else to do.
-    </P>
-    <!--note to dwijay: maybe make this id=para and then use internal css to make it big?-->
+    <P >
+      </P>
     <h4 id="h4">Development</h4>
     <hr id="solid">
-    <p id="para">In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
+    <p >In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
       games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
       video game development (or indie games)
       to gain prominence into the 2010s. Since then, the commercial importance of the video game industry has been
