--- a/homepage.html
+++ b/homepage.html
@@ -43,8 +43,8 @@
   }
 
   p {
-    font: 15px/2 'Candara';
     margin: 0 0 30px 0;
+    font-size: medium;
     text-indent: 40px;
   }
 </style>
@@ -69,9 +69,9 @@
         alt="logo" style="width: 100px;height:50px;float:right">
       <a href="#home" class="active">Home</a>
       <a href="#Adven">Red Dead Redemption 2</a>
-      <a href="#Multiplayer shooters">Valorant</a>
+      <a href="valorant.html">Valorant</a>
       <a href="#Multiplayer shooters">Need For Speed</a>
-      <a href="#Quiz">Quiz</a>
+      <a href="quiz.html">Quiz</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -88,28 +88,22 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
+      <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
       <div class="text">Valorant</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
+      <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
       <div class="text">Home</div>
     </div>
     <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="https://user-images.githubusercontent.com/94490873/146279031-a9264402-f91f-4299-a5d3-4d4794e65886.png" style="width:100%">
+      <div class="numbertext">3 / 3</div>
+      <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146279031-a9264402-f91f-4299-a5d3-4d4794e65886.png" style="width:100%">
       <div class="text">Red Dead Redemption</div>
     </div>
     <br>
 
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
   
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
