--- a/quiz.html
+++ b/quiz.html
@@ -34,7 +34,7 @@
 		}
 		
 		#page-wrap { position: relative; width: 400px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
-		p { font: 15px/2 Georgia, Serif; margin: 0 0 30px 0; text-indent: 40px; }
+		p { font: 15px/2 'cursive'; margin: 0 0 30px 0; text-indent: 40px; }
 	
 </style>
 <body id="body">
@@ -43,18 +43,15 @@
    
 </div>
 
-    
-    
- 
 <div class = "quizmaintingz">
 <div class="topnav" id="myTopnav">
             <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
                 alt="logo" style="width: 100px;height:50px;float:right">
-            <a href="#home" class="active">Home</a>
+            <a href="homepage.html" class="active">Home</a>
             <a href="#Adven">Adventure game</a>
             <a href="#Racer">Need for speed: Rivals</a>
-            <a href="#Multiplayer shooters">Multiplayer shooters</a>
-            <a href="#Quiz">Quiz</a>
+            <a href="valorant.html">Multiplayer shooters</a>
+            <a href="quiz.html">Quiz</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
