--- a/valorant.html
+++ b/valorant.html
@@ -64,8 +64,8 @@
                     <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
                         alt="logo" style="width: 100px;height:50px;float:right">
                     <a href="homepage.html" class="active">Home</a>
-                    <a href="#Adven">Adventure game</a>
-                    <a href="#Racer">Need for speed: Rivals</a>
+                    <a href="rdr2.html">Adventure game</a>
+                    <a href="needforspeed.html">Need for speed: Rivals</a>
                     <a href="valorant.html">Multiplayer shooters</a>
                     <a href="quiz.html">Quiz</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
