added css classes to each link so the table of console works

--- a/homepage.html
+++ b/homepage.html
@@ -148,13 +148,18 @@
       </p>
       <ul class="toc_list">
         <li><a href="#h2">1 Relevance</a></li>
-        <li><a href="#h4">2 Development</a></li>
+        <li><a href="#Development">2 Development</a></li>
+        <li><a href="#Platforms">3 Platforms</a></li>
+        <li><a href="#Computer-game">4 Computer Game</a></li>
+        <li><a href="#Home-console">5 Home Console</a></li>
+        <li><a href="#Handheld-console">6 Handheld Console</a></li>
+        <li><a href="#Arcade-Video-Game">7 Arcade Video Game</a></li>
       </ul>
     </div>
     <h2 id="h2">Relevance</h2>
     <hr id="solid">
     <p>
-      video games used to be very niche market. not many people played them as they were a new technology. However, weith the rise of arcades, several young children started to enjoy the fun of videogames.
+      Most of the world plays video games right now and they have become immensely popular recently. They have been around since the 1970s and have been becoming more and more mainstream in the time since. When COVID came about and everyone was stuck at home, video games gained immense popularity as people had nothing else to do
 
     </p>
     <img
@@ -162,7 +167,7 @@
       id="img" width="250px" height="200px" style="float: right">
     <P >
       </P>
-    <h4 id="h4">Development</h4>
+    <h4 id="Development">Development</h4>
     <hr id="solid">
     <p >In the 2000s, the core industry centered on "AAA" games, leaving little room for riskier, experimental
       games. Coupled with the availability of the Internet and digital distribution, this gave room for independent
@@ -175,6 +180,22 @@
       size of the 2019 global
       music industry and four times that of the 2019 film industry.
     </p>
+  <h4 id="Platforms">Platforms</h4>
+  <p>Video games require a platform, a specific combination of electronic components or computer hardware and associated software, to operate.[32] The term system is also commonly used. Games are typically designed to be played on one or a limited number of platforms, and exclusivity to a platform is used as a competitive edge in the video game market.[33] However, games may be developed for alternative platforms than intended, which are described as ports or conversions. These also may be remasters - where most of the original game's source code is reused and art assets, models, and game levels are updated for modern systems - and remakes, where in addition to asset improvements, significant reworking of the original game and possibly from scratch is performed.[34]
+    The list below is not exhaustive and excludes other electronic devices capable of playing video games such as PDAs and graphing calculators.
+  </p> 
+  <h4 id="Computer-game">Computer game</h4>
+  <p>Most computer games are PC games, referring to those that involve a player interacting with a personal computer (PC) connected to a video monitor.[35] Personal computers are not dedicated game platforms, so there may be differences running the same game on different hardware. Also, the openness allows some features to developers like reduced software cost,[36] increased flexibility, increased innovation, emulation, creation of modifications or mods, open hosting for online gaming (in which a person plays a video game with people who are in a different household) and others. A gaming computer is a PC or laptop intended specifically for gaming, typically using high-performance, high-cost components. In additional to personal computer gaming, there also exist games that work on mainframe computers and other similarly shared systems, with users logging in remotely to use the computer.
+  </p>
+  <h4 id="Home-console">Home Console</h4>
+  <p>A console game is played on a home console, a specialized electronic device that connects to a common television set or composite video monitor. Home consoles are specifically designed to play games using a dedicated hardware environment, giving developers a concrete hardware target for development and assurances of what features will be available, simplifying development compared to PC game development. Usually consoles only run games developed for it, or games from other platform made by the same company, but never games developed by its direct competitor, even if the same game is available on different platforms. It often comes with a specific game controller. Major console platforms include Xbox, PlayStation, and Nintendo.
+  </p>
+  <h4 id="Handheld-console">Handheld Console</h4>
+  <p>A handheld gaming device is a small, self-contained electronic device that is portable and can be held in a user's hands. It features the console, a small screen, speakers and buttons, joystick or other game controllers in a single unit. Like consoles, handhelds are dedicated platforms, and share almost the same characteristics. Handheld hardware usually is less powerful than PC or console hardware. Some handheld games from the late 1970s and early 1980s could only play one game. In the 1990s and 2000s, a number of handheld games used cartridges, which enabled them to be used to play many different games. The handheld console has waned in the 2010s as mobile device gaming has become a more dominant factor.
+  </p>
+  <h4 id="Arcade-Video-Game">Arcade Video Game</h4>
+  <p> 
+    An arcade video game generally refers to a game played on an even more specialized type of electronic device that is typically designed to play only one game and is encased in a special, large coin-operated cabinet which has one built-in console, controllers (joystick, buttons, etc.), a CRT screen, and audio amplifier and speakers. Arcade games often have brightly painted logos and images relating to the theme of the game. While most arcade games are housed in a vertical cabinet, which the user typically stands in front of to play, some arcade games use a tabletop approach, in which the display screen is housed in a table-style cabinet with a see-through table top. With table-top games, the users typically sit to play. In the 1990s and 2000s, some arcade games offered players a choice of multiple games. In the 1980s, video arcades were businesses in which game players could use a number of arcade video games. In the 2010s, there are far fewer video arcades, but some movie theaters and family entertainment centers still have them.</p>
   </div>
   </div>
   </div>
