added text, changed fonts

--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="body">
+<html class="body">
 
 <head>
   <meta charset="utf-8">
@@ -7,6 +7,7 @@
   <!--title -->
   <title>Homepage</title>
   <link href="test.css" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <style>
   img.bg {
@@ -49,7 +50,7 @@
   }
 </style>
 
-<body id="body">
+<body class="body">
   <div id="repeat">
     <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png"
       class="bg">
@@ -154,8 +155,7 @@
     <h2 id="h2">Relevance</h2>
     <hr id="solid">
     <p>
-      video games used to be very niche market. not many people played them as they were a new technology. However, weith the rise of arcades, several young children started to enjoy the fun of videogames.
-
+      Originally a niche market, video games have recently gained the attention of mainstream society. When they were first created, video games were very much a minority played thing due to the cost and impracticality of the large computers necessary for playing them. However, upon the creation and spreading of arcades, many of the youth of that time quickly became avid gamers. Later, upon introduction of the home console, games became accessible to the average person and the video game market boomed. These days, the market is huge and a remarkable percent of the world's population has played video games at some point in their life. Upon the hitting of COVID, due to the fact that you can play video games in the comfort of your homes along with your friends, the popularity of video games surged once again. 
     </p>
     <img
       src="https://media.istockphoto.com/photos/young-man-wearing-headset-and-play-computer-video-games-online-home-picture-id1290727524?b=1&k=20&m=1290727524&s=170667a&w=0&h=8Ff68TwSesdnGUfE_GbVq5-9l-94vga7F0lAZOK8YkQ="
