--- a/rdr2.html
+++ b/rdr2.html
@@ -7,6 +7,7 @@
   <!--title -->
   <title>Valorant</title>
   <link href="test.css" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <style>
   img.bg {
