--- a/needforspeed.html
+++ b/needforspeed.html
@@ -7,6 +7,7 @@
   <!--title -->
   <title>Need for Speed</title>
   <link href="test.css" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <style>
   img.bg {
@@ -123,7 +124,7 @@
     <hr id="solid">
     <br>
     <br>
-    <img src="https://cdn.mos.cms.futurecdn.net/YHdtAs36hSJUL56Lq2nxFi-320-80.jpg" id="img" height="250" width="250" style="float: right">
+    <img src="https://user-images.githubusercontent.com/94490873/146660432-69ae1a58-7223-4f31-b633-c8eabae113d3.jpeg" id="img" height="250" width="250" style="float: right">
     <p> Need for Speed Rivals is a 2013 racing video game developed in a collaboration between Ghost Games and Criterion Games, and published by Electronic Arts. It is the twentieth installment in the Need for Speed series and the debut title for Ghost Games, who would be established as the primary developer of the series for all subsequent non-mobile installments up until 2020. The game was released for Microsoft Windows, PlayStation 3, PlayStation 4, Xbox 360 and Xbox One in November 2013, and is the final Need for Speed game for both the PlayStation 3 and the Xbox 360. Players take on the role of a Racer or Cop, with each side of the law offering its own play style.
 
         After the commercial and critical success of 2010's Need for Speed: Hot Pursuit, Criterion Games executives stated that they wanted to draw from the series' roots and re-introduce old Need for Speed ideals. With EA Canada and Black Box restructured and refocused towards online and free-to-play games in February 2012, EA had already formed a new studio in 2011, EA Gothenburg (later known as Ghost Games), who decided to use the Frostbite 3 engine for Rivals. In August 2013, Ghost Games head Marcus Nilsson stated that the studio had been given complete charge of the Need for Speed franchise and that the franchise being bounced between multiple EA studios was not "consistent" with different game types.
