--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,7 @@
     <title>Quiz</title>
     <link href="test.css" rel="stylesheet" type="text/css" />
     <link href="quiz.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <style>
 
@@ -34,7 +35,7 @@
 		}
 		
 		#page-wrap { position: relative; width: 400px; margin: 50px auto; padding: 20px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; }
-		p { font: 15px/2 'cursive'; margin: 0 0 30px 0; text-indent: 40px; }
+		p { font: 15px/2 'lato'; margin: 0 0 30px 0; text-indent: 40px; }
 	
 </style>
 <body id="body">
