added parts to carousel

--- a/homepage.html
+++ b/homepage.html
@@ -88,20 +88,25 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
+      <div class="numbertext">1 / 4</div>
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
       <div class="text">Valorant</div>
     </div>
   
     <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
+      <div class="numbertext">2 / 4</div>
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
       <div class="text">Home</div>
     </div>
     <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
+      <div class="numbertext">3 / 4</div>
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146279031-a9264402-f91f-4299-a5d3-4d4794e65886.png" style="width:100%">
       <div class="text">Red Dead Redemption</div>
+    </div>
+    <div class="mySlides fade">
+      <div class="numbertext">4/ 4</div>
+      <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146660432-69ae1a58-7223-4f31-b633-c8eabae113d3.jpeg" style="width:100%">
+      <div class="text">Need for speed</div>
     </div>
     <br>
 
@@ -117,6 +122,7 @@
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
   </div>
  
     
@@ -219,7 +225,12 @@
   <p>Backward compatibility is similar in nature to emulation in that older games can be played on newer platforms, but typically directly though hardware and build-in software within the platform. For example, the PlayStation 2 is capable of playing original PlayStation games simply by inserting the original game media into the newer console, while Nintendo's Wii could play Nintendo GameCube titles as well in the same manner.
   </p>
   <h4 id="Types">Types of video games</h4>
-  <p></p>
+  <p>Video games come in many different genres. Some of these include: <ul>
+   <li> Adventures</li>
+   <li>Racing</li>
+   <li>Multiplayer shooters</li>
+  </ul>
+  </p>
   </div>
   </div>
   </div>
